@@ -18,7 +18,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.bmuschko:gradle-clover-plugin:2.2.1'
+        classpath "com.bmuschko:gradle-clover-plugin:$cloverPluginVersion"
         classpath "com.github.jengelman.gradle.plugins:shadow:2.0.3"
          
         ////////// Goomph //////////      
@@ -27,6 +27,14 @@ buildscript {
         // creates a targetplatform
         classpath "org.standardout:bnd-platform:${VER_BND_PLATFORM}"
     }
+}
+
+plugins {
+    id 'eclipse'
+    id 'java'
+    id 'maven-publish'
+    id 'signing'
+    id 'com.bmuschko.clover' version "$cloverPluginVersion"
 }
 
 // checking the presence of an Eclipse API baseline repositorsy
@@ -40,22 +48,22 @@ if (project.properties['api.baseline'] == null || project.properties['api.baseli
     println "iObserve API baseline repository is at: " + project.properties['api.baseline']
 }
 
-apply plugin: 'eclipse'
-apply plugin: 'java'
-apply plugin: 'maven'
-apply plugin: 'signing'
-apply plugin: 'com.bmuschko.clover'
-
 tasks.withType(GroovyCompile) {
     configure(groovyOptions.forkOptions) {
         memoryMaximumSize = '4g'
-        jvmArgs = ['-XX:MaxPermSize=4048m', '-Xms4048m', '-Xmx8g']
+        jvmArgs = ['-Xms4048m', '-Xmx8g']
     }
 }
 
 def confDir = "${project.rootDir}/qa-configurations"
 
 repositories {
+    maven {url project.properties['api.baseline']
+        metadataSources {
+            mavenPom()
+            artifact()
+        }
+    }
     mavenCentral()
     jcenter()
 }
@@ -71,20 +79,31 @@ clover {
 
 subprojects {
     apply plugin: 'java'
-    apply plugin: 'maven'
+    apply plugin: 'maven-publish'
     apply plugin: 'eclipse'
     apply plugin: 'com.bmuschko.clover'
-
+    apply plugin: 'pmd'
+    apply plugin: 'checkstyle'
+    
+    
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
     
-    version = '0.0.3-SNAPSHOT'
+    version = '0.0.4-SNAPSHOT'
     group = 'org.iobserve'
     
     repositories {
+        maven {url project.properties['api.baseline']
+	    metadataSources {
+               mavenPom()
+               artifact()
+            }
+        }
+        
         mavenCentral()
         jcenter()
-        maven {url project.properties['api.baseline']}
+        
+	maven {url "https://mvnrepository.com/artifact/org.hyperic/sigar"}
         maven {url "https://repo.eclipse.org/content/groups/releases/" }
         maven {url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven {url "https://oss.sonatype.org/content/repositories/releases/" }
@@ -92,11 +111,11 @@ subprojects {
         maven {url "https://oss.sonatype.org/content/groups/public/"}
         maven {url "https://jitpack.io"}
         maven {url "https://mvnrepository.com/artifact/org.eclipse/ocl" }
-        maven {url "http://mvnrepository.com/artifact/org.eclipselabs/cdo.p2"}
-        maven {url "http://mvnrepository.com/artifact/org.eclipselabs/cdo"}
-        maven {url "http://mvnrepository.com/artifact/org.eclipselabs/cdo-maven"}
-        maven {url "http://mvnrepository.com/artifact/commons-daemon/commons-daemon"}
-        maven {url "http://mvnrepository.com/artifact/commons-cli/commons-cli"}
+        maven {url "https://mvnrepository.com/artifact/org.eclipselabs/cdo.p2"}
+        maven {url "https://mvnrepository.com/artifact/org.eclipselabs/cdo"}
+        maven {url "https://mvnrepository.com/artifact/org.eclipselabs/cdo-maven"}
+        maven {url "https://mvnrepository.com/artifact/commons-daemon/commons-daemon"}
+        maven {url "https://mvnrepository.com/artifact/commons-cli/commons-cli"}
         maven {url "https://mvnrepository.com/artifact/org.antlr/antlr-runtime"}
 
         ////////// Goomph //////////
@@ -133,8 +152,6 @@ subprojects {
     }
 
     // --- quality assurance plugins ---
-
-    apply plugin: 'pmd'
     pmd {
         // the used PMD version should be the same version as the PMD Eclipse plugin (https://marketplace.eclipse.org/content/eclipse-pmd) uses
         toolVersion = pmdAndCpdVersion
@@ -146,26 +163,13 @@ subprojects {
         ruleSetFiles = files(resolveRelativeToParent(confDir, 'pmdrules.xml'))
     }
 
-    // check.dependsOn(':cpdCheck')
-
-    apply plugin: 'checkstyle'
     checkstyle {
         toolVersion = checkstyleVersion
         ignoreFailures = true
         showViolations = false
         configFile = new File(confDir, "checkstyle-rules.xml")
-        configDir = new File(confDir)
+        configDirectory = file(confDir)
     }
-
-    // apply plugin: 'findbugs'
-    // findbugs {        
-    //    toolVersion = fbVersion
-    //    ignoreFailures = true
-    //    effort = "max"
-    //    reportLevel = "low"
-
-    //    excludeFilter = resolveRelativeToParent(dirConfig, 'fb-filter.xml')
-    //}
 
     tasks.withType(Pmd) {
         reports {
@@ -176,21 +180,14 @@ subprojects {
 
     tasks.withType(Checkstyle) {
         reports {
-            xml.enabled true
-        }
-    }
-
-    tasks.withType(FindBugs) {
-        reports {
             xml.enabled = true
-            html.enabled = false
         }
     }
 
     ext {
         appName = "org.iobserve"
     }
-    
+
     eclipse {
         classpath {
             downloadSources=true
@@ -604,3 +601,4 @@ equinoxLaunch {
         source.addMaven('extra:org.apache.batik.util.gui:1.8.0.v20170214-1941')
     }
 }
+
